Fixed the title bar buttons not using the correct spacing.

--- a/src/sass/_styles.scss
+++ b/src/sass/_styles.scss
@@ -30,6 +30,7 @@ $minimum-width: 768px;
         padding-bottom: 5px;
         padding-left: 9px;
         padding-right: 9px;
+        margin: 3px;
         outline: none;
         transition: var(--json-tree-js-transition);
 
